@@ -5,5 +5,4 @@ I need to do these things:
 
 Anyone can help with these things:
 
-* Fix the example dgram-client.c
 * Compile on as many platforms as possible
