@@ -28,123 +28,151 @@
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-/*
- * Warhammer-dgram: a simple denial of service tool which uses datagrams, and
- * illustrates how LibSAM works.
- * Use only with the utmost courtesy.
- */
-
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
+#include <time.h>
+#include <unistd.h>
 #include "sam.h"
 
-/*
- * LibSAM callbacks - functions in our code that are called by LibSAM when
- * something happens
- */
-static void dgramback(sam_sess_t *session, sam_pubkey_t dest, void *data,
+static void usage();
+
+static void closeback(sam_sess_t *session, sam_sid_t stream_id,
+	samerr_t reason);
+static void connectback(sam_sess_t *session, sam_sid_t stream_id,
+	sam_pubkey_t dest);
+static void databack(sam_sess_t *session, sam_sid_t stream_id, void *data,
 	size_t size);
 static void diedback(sam_sess_t *session);
 static void logback(char *s);
 static void namingback(char *name, sam_pubkey_t pubkey, samerr_t result);
+static void statusback(sam_sess_t *session, sam_sid_t stream_id,
+	samerr_t result);
 
-/*
- * Just some ugly global variables.  Don't do this in your program.
- */
 bool gotdest = false;
 sam_pubkey_t dest;
+bool quiet = false;
+samerr_t laststatus = SAM_NULL;
+sam_sid_t laststream = 0;
 
 int main(int argc, char* argv[])
 {
-	/*
-	 * The target of our attack is specified on the command line
-	 */
-	if (argc != 2) {
-		fprintf(stderr, "Syntax: %s <b64dest|name>\n", argv[0]);
+	int ch;
+	int count = 1;  /* number of times to ping */
+	char *samhost = "localhost";
+	uint16_t samport = 7656;
+
+	while ((ch = getopt(argc, argv, "c:h:p:qv")) != -1) {
+		switch (ch) {
+			case 'c':  /* packet count */
+				count = atoi(optarg);
+				break;
+			case 'h':  /* SAM host */
+				samhost = optarg;
+				break;
+			case 'p':  /* SAM port */
+				samport = atoi(optarg);
+				break;
+			case 'q':  /* quiet mode */
+				quiet = true;
+				break;
+			case 'v':  /* version */
+				puts("$Id$");
+				puts("Copyright (c) 2004, Matthew P. Cashdollar <mpc@innographx.com>");
+				return 0;
+			case '?':
+			default:
+				usage();
+				return 0;
+		}
+	}
+	argc -= optind;
+	argv += optind;
+	if (argc == 0 || argc > 1) {  /* they forgot to specify a ping target */
+		fprintf(stderr, "Invalid number of targets\n");
+		usage();
 		return 1;
 	}
 
 	/* Hook up the callback functions - required by LibSAM */
-	sam_dgramback = &dgramback;
+	sam_closeback = &closeback;
+	sam_connectback = &connectback;
+	sam_databack = &databack;
 	sam_diedback = &diedback;
 	sam_logback = &logback;
 	sam_namingback = &namingback;
+	sam_statusback = &statusback;
 
-	/*
-	 * This tool would be more destructive if multiple SAM session were used,
-	 * but they aren't - at least for now.
-	 */
 	sam_sess_t *session = NULL;  /* set to NULL to have LibSAM do the malloc */
 	session = sam_session_init(session);  /* malloc and set defaults */
-
-	/* Connect to the SAM server -- you can use either an IP or DNS name */
-	samerr_t rc = sam_connect(session, "localhost", 7656, "TRANSIENT",
-		SAM_DGRAM, 2);  /* the tunnel length of 2 can be adjusted to whatever */
+	samerr_t rc = sam_connect(session, samhost, samport, "TRANSIENT",
+		SAM_STREAM, 0);
 	if (rc != SAM_OK) {
 		fprintf(stderr, "SAM connection failed: %s\n", sam_strerror(rc));
 		sam_session_free(&session);
 		return 1;
 	}
 
-	/*
-	 * Check whether they've supplied a name or a base 64 destination
-	 *
-	 * Note that this is a hack.  Jrandom says that once certificates are added,
-	 * the length could be different depending on the certificate's size.
-	 */
-	if (strlen(argv[1]) == 516) {
-		memcpy(dest, argv[1], SAM_PUBKEY_LEN);
+	if (strlen(argv[0]) == 516) {
+		memcpy(dest, argv[0], SAM_PUBKEY_LEN);
 		gotdest = true;
-	} else {
-		/*
-		 * If they supplied a name, we have to do a lookup on it.  This is
-		 * equivalent to doing a DNS lookup on the normal internet.  When the
-		 * lookup completes, we send them some data.
-		 */
-		sam_naming_lookup(session, argv[1]);
-	}
+	} else
+		sam_naming_lookup(session, argv[0]);
 
 	while (!gotdest)  /* just wait for the naming lookup to complete */
 		sam_read_buffer(session);
 
-	char data[SAM_DGRAM_PAYLOAD_MAX];
-	memset(data, '$', SAM_DGRAM_PAYLOAD_MAX);  /* We're sending them MONEY! */
-	size_t sentbytes = 0;
-	while (true) {
-		/*
-		 * Send them a flood of the largest sized datagrams possible in an
-		 * infinite loop!
-		 */
-		rc = sam_dgram_send(session, dest, data, SAM_DGRAM_PAYLOAD_MAX);
-		if (rc != SAM_OK) {
-			fprintf(stderr, "sam_dgram_send() failed: %s\n", sam_strerror(rc));
-			sam_session_free(&session);
-			return 1;
+	for (int i = 0; i < count; ++i) {
+		time_t start = time(0);
+		sam_sid_t sid = sam_stream_connect(session, dest);
+		while (laststream != sid && laststatus == SAM_NULL)
+			sam_read_buffer(session);  /* wait for the connect */
+		if (laststatus == SAM_OK)
+			sam_stream_close(session, laststream);
+		time_t finish = time(0);
+		laststream = 0;
+		if (laststatus == SAM_OK) {
+			printf("%s: %.0fs\n", argv[0], difftime(finish, start));
+		} else {
+			printf("Ping failed: %s\n", sam_strerror(laststatus));
 		}
-		sentbytes += SAM_DGRAM_PAYLOAD_MAX;
-		printf("Bombs away! (%u kbytes sent so far)\n", sentbytes / 1024);
-		/*
-		 * sam_read_buffer() just checks for incoming activity from the SAM
-		 * session, and invokes the appropriate callbacks.  We aren't really
-		 * expecting any incoming activity here, but it is a good idea to check
-		 * anyway.
-		 */
-		sam_read_buffer(session);
+		laststatus = SAM_NULL;
 	}
 
-	sam_session_free(&session); /* de-allocates memory used by the SAM session*/
+	sam_close(session);
+	sam_session_free(&session);
 	return 0;
 }
 
+void usage()
+{
+	puts("Ha!  Help?  You've got to be kidding!");
+}
+
 /*
- * When we receive some data from another peer, just ignore it.  Denial of
- * service programs don't need input ;)
+ * Connection closed
  */
-static void dgramback(sam_sess_t *session, sam_pubkey_t dest, void *data,
+static void closeback(sam_sess_t *session, sam_sid_t stream_id, samerr_t reason)
+{
+	fprintf(stderr, "Connection closed to stream %d: %s\n", stream_id,
+		sam_strerror(reason));
+}
+
+/*
+ * Someone connected to us - how dare they!
+ */
+static void connectback(sam_sess_t *session, sam_sid_t stream_id,
+		sam_pubkey_t dest)
+{
+	sam_stream_close(session, stream_id);
+}
+
+/*
+ * A peer sent us some data - just ignore it
+ */
+static void databack(sam_sess_t *session, sam_sid_t stream_id, void *data,
 		size_t size)
 {
-	puts("Received a datagram (ignored)");
 	free(data);
 }
 
@@ -155,7 +183,6 @@ static void dgramback(sam_sess_t *session, sam_pubkey_t dest, void *data,
 static void diedback(sam_sess_t *session)
 {
 	fprintf(stderr, "Lost SAM connection!\n");
-	/* high quality code would do a sam_session_free() here */
 	exit(1);
 }
 
@@ -165,7 +192,8 @@ static void diedback(sam_sess_t *session)
  */
 static void logback(char *s)
 {
-	fprintf(stderr, "LibSAM: %s\n", s);
+	if (!quiet)
+		fprintf(stderr, "LibSAM: %s\n", s);
 }
 
 /*
@@ -176,9 +204,18 @@ static void namingback(char *name, sam_pubkey_t pubkey, samerr_t result)
 {
 	if (result != SAM_OK) {
 		fprintf(stderr, "Naming lookup failed: %s\n", sam_strerror(result));
-		/* high quality code would do a sam_session_free() here */
 		exit(1);
 	}
 	memcpy(dest, pubkey, SAM_PUBKEY_LEN);
 	gotdest = true;
+}
+
+/*
+ * Our connection attempt returned a result
+ */
+static void statusback(sam_sess_t *session, sam_sid_t stream_id,
+		samerr_t result)
+{
+	laststatus = result;
+	laststream = stream_id;
 }
